--- a/repertoire/Src/Screen1.fx.yaml
+++ b/repertoire/Src/Screen1.fx.yaml
@@ -33,3 +33,9 @@ Screen1 As screen:
             Visible: =chargement
             ZIndex: =3
 
+    Label1 As label:
+        Text: ="Texte123456789"
+        X: =100
+        Y: =260
+        ZIndex: =4
+
