--- a/repertoire/Src/Components/Masque_De_Chargement.fx.yaml
+++ b/repertoire/Src/Components/Masque_De_Chargement.fx.yaml
@@ -32,6 +32,9 @@ Masque_De_Chargement As CanvasComponent:
     Timer_chronometre As timer:
         AutoStart: =true
         Duration: =If(Masque_De_Chargement.Visible,3600000,1)
+        Fill: =RGBA(56, 96, 178, 1)
+        HoverColor: =RGBA(255, 255, 255, 1)
+        HoverFill: =ColorFade(RGBA(56, 96, 178, 1), -20%)
         OnTimerEnd: =
         Start: =Masque_De_Chargement.Visible
         X: =-200
@@ -41,6 +44,9 @@ Masque_De_Chargement As CanvasComponent:
     Timer_boucle_animation As timer:
         AutoStart: =true
         Duration: =1000//5000-(5000*(Masque_De_Chargement._eVitesseDeLanimation/100))
+        Fill: =RGBA(56, 96, 178, 1)
+        HoverColor: =RGBA(255, 255, 255, 1)
+        HoverFill: =ColorFade(RGBA(56, 96, 178, 1), -20%)
         Repeat: =true
         Start: |-
             =Masque_De_Chargement.Visible
@@ -50,6 +56,9 @@ Masque_De_Chargement As CanvasComponent:
         ZIndex: =3
 
     Image1 As image:
+        BorderColor: =RGBA(0, 18, 107, 1)
+        DisabledBorderColor: =RGBA(166, 166, 166, 1)
+        DisabledFill: =RGBA(244, 244, 244, 1)
         Height: =123+0.1
         Image: ='EN1CLIC-LOGO2'
         ImagePosition: =ImagePosition.Center
@@ -67,6 +76,7 @@ Masque_De_Chargement As CanvasComponent:
         ZIndex: =13
 
         Rectangle3 As rectangle:
+            BorderColor: =RGBA(0, 18, 107, 1)
             Fill: =RGBA(230, 230, 230, Masque_De_Chargement._eOpacitéDuMasquage/100)
             Height: =Masque_De_Chargement.Height
             Visible: =Masque_De_Chargement._eEnable
@@ -74,6 +84,7 @@ Masque_De_Chargement As CanvasComponent:
             ZIndex: =1
 
         Rectangle2 As rectangle:
+            BorderColor: =RGBA(0, 18, 107, 1)
             Fill: =Masque_De_Chargement._eCouleurDesBarres
             Height: =5
             Visible: =Masque_De_Chargement._eEnable
@@ -82,6 +93,7 @@ Masque_De_Chargement As CanvasComponent:
             ZIndex: =4
 
         Rectangle2_1 As rectangle:
+            BorderColor: =RGBA(0, 18, 107, 1)
             Fill: =Masque_De_Chargement._eCouleurDesBarres
             Height: =5
             Visible: =Masque_De_Chargement._eEnable
@@ -90,6 +102,7 @@ Masque_De_Chargement As CanvasComponent:
             ZIndex: =5
 
         Rectangle2_2 As rectangle:
+            BorderColor: =RGBA(0, 18, 107, 1)
             Fill: =Masque_De_Chargement._eCouleurDesBarres
             Height: =5
             Visible: =Masque_De_Chargement._eEnable
@@ -99,6 +112,7 @@ Masque_De_Chargement As CanvasComponent:
             ZIndex: =6
 
         Rectangle2_3 As rectangle:
+            BorderColor: =RGBA(0, 18, 107, 1)
             Fill: =Masque_De_Chargement._eCouleurDesBarres
             Height: =5
             Visible: =Masque_De_Chargement._eEnable
@@ -108,6 +122,7 @@ Masque_De_Chargement As CanvasComponent:
             ZIndex: =7
 
         Rectangle2_4 As rectangle:
+            BorderColor: =RGBA(0, 18, 107, 1)
             Fill: =Masque_De_Chargement._eCouleurDesBarres
             Height: =Masque_De_Chargement.Height/6
             Visible: =Masque_De_Chargement._eEnable
@@ -116,6 +131,7 @@ Masque_De_Chargement As CanvasComponent:
             ZIndex: =8
 
         Rectangle2_5 As rectangle:
+            BorderColor: =RGBA(0, 18, 107, 1)
             Fill: =Masque_De_Chargement._eCouleurDesBarres
             Height: =Masque_De_Chargement.Height/6
             Visible: =Masque_De_Chargement._eEnable
@@ -125,6 +141,7 @@ Masque_De_Chargement As CanvasComponent:
             ZIndex: =9
 
         Rectangle2_6 As rectangle:
+            BorderColor: =RGBA(0, 18, 107, 1)
             Fill: =Masque_De_Chargement._eCouleurDesBarres
             Height: =Masque_De_Chargement.Height/6
             Visible: =Masque_De_Chargement._eEnable
@@ -133,6 +150,7 @@ Masque_De_Chargement As CanvasComponent:
             ZIndex: =10
 
         Rectangle2_7 As rectangle:
+            BorderColor: =RGBA(0, 18, 107, 1)
             Fill: =Masque_De_Chargement._eCouleurDesBarres
             Height: =Masque_De_Chargement.Height/6
             Visible: =Masque_De_Chargement._eEnable
@@ -143,7 +161,9 @@ Masque_De_Chargement As CanvasComponent:
 
         Label3 As label:
             Align: =Align.Center
+            BorderColor: =RGBA(0, 18, 107, 1)
             Color: =Masque_De_Chargement._eCouleurTexte
+            DisabledColor: =RGBA(166, 166, 166, 1)
             Fill: =RGBA(0,0,0,0)
             Height: =Masque_De_Chargement.Height
             Size: =Masque_De_Chargement._eTailleDuTexte
