--- a/repertoire/Src/Screen1.fx.yaml
+++ b/repertoire/Src/Screen1.fx.yaml
@@ -1,25 +1,51 @@
 Screen1 As screen:
+    Fill: =RGBA(216, 226, 232, 1)
+    LoadingSpinnerColor: =RGBA(68, 57, 38, 1)
 
     Button4_1 As button:
+        DisabledBorderColor: =RGBA(166, 166, 166, 1)
+        DisabledColor: =RGBA(166, 166, 166, 1)
+        DisabledFill: =RGBA(244, 244, 244, 1)
+        Fill: =RGBA(68, 57, 38, 1)
+        FontWeight: =FontWeight.Semibold
+        HoverColor: =RGBA(255, 255, 255, 1)
+        HoverFill: =ColorFade(RGBA(68, 57, 38, 1), -20%)
         OnSelect: =Set(chargement,!chargement)
+        Size: =15
         Text: ="Bouton"
         X: =1094
         Y: =405
         ZIndex: =2
 
     Label1 As label:
+        BorderColor: =RGBA(119, 77, 3, 1)
+        Color: =RGBA(0, 0, 0, 1)
+        DisabledColor: =RGBA(166, 166, 166, 1)
+        Size: =13
         Text: ="Texte!!!"
         X: =100
         Y: =260
         ZIndex: =4
 
     Button1 As button:
+        DisabledBorderColor: =RGBA(166, 166, 166, 1)
+        DisabledColor: =RGBA(166, 166, 166, 1)
+        DisabledFill: =RGBA(244, 244, 244, 1)
+        Fill: =RGBA(68, 57, 38, 1)
+        FontWeight: =FontWeight.Semibold
+        HoverColor: =RGBA(255, 255, 255, 1)
+        HoverFill: =ColorFade(RGBA(68, 57, 38, 1), -20%)
+        Size: =15
         Text: ="Bouton"
         X: =40
         Y: =40
         ZIndex: =5
 
     Icon1 As icon.CancelBadge:
+        BorderColor: =RGBA(119, 77, 3, 1)
+        Color: =RGBA(119, 77, 3, 1)
+        DisabledBorderColor: =RGBA(166, 166, 166, 1)
+        DisabledColor: =RGBA(244, 244, 244, 1)
         Icon: =Icon.CancelBadge
         X: =356
         Y: =40
