--- a/repertoire/Src/Screen_N_2.fx.yaml
+++ b/repertoire/Src/Screen_N_2.fx.yaml
@@ -1,6 +1,9 @@
 Screen_N_2 As screen:
+    Fill: =RGBA(216, 226, 232, 1)
+    LoadingSpinnerColor: =RGBA(68, 57, 38, 1)
 
     "Gallery1 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver4.0'":
+        BorderColor: =RGBA(119, 77, 3, 1)
         Items: =CustomGallerySample
         Layout: =Layout.Vertical
         TemplatePadding: =0
@@ -10,6 +13,9 @@ Screen_N_2 As screen:
         ZIndex: =1
 
         Image2 As image:
+            BorderColor: =RGBA(119, 77, 3, 1)
+            DisabledBorderColor: =RGBA(166, 166, 166, 1)
+            DisabledFill: =RGBA(244, 244, 244, 1)
             Height: =128
             OnSelect: =Select(Parent)
             Width: =128
@@ -18,12 +24,16 @@ Screen_N_2 As screen:
             ZIndex: =1
 
         Title1 As label:
+            Color: =RGBA(0, 0, 0, 1)
+            DisabledColor: =RGBA(166, 166, 166, 1)
+            FontWeight: =FontWeight.Semibold
             Height: =Self.Size * 1.8
             OnSelect: =Select(Parent)
             PaddingBottom: =0
             PaddingLeft: =0
             PaddingRight: =0
             PaddingTop: =0
+            Size: =20
             Text: =ThisItem.SampleHeading
             VerticalAlign: =VerticalAlign.Top
             Width: =Parent.TemplateWidth - Image2.Width - 104
@@ -32,12 +42,15 @@ Screen_N_2 As screen:
             ZIndex: =2
 
         Subtitle1 As label:
+            Color: =RGBA(0, 0, 0, 1)
+            DisabledColor: =RGBA(166, 166, 166, 1)
             Height: =Self.Size * 1.8
             OnSelect: =Select(Parent)
             PaddingBottom: =0
             PaddingLeft: =0
             PaddingRight: =0
             PaddingTop: =0
+            Size: =18
             Text: =ThisItem.SampleText
             VerticalAlign: =VerticalAlign.Top
             Width: =Title1.Width
@@ -47,6 +60,10 @@ Screen_N_2 As screen:
 
         NextArrow1 As icon.ChevronRight:
             AccessibleLabel: =Self.Tooltip
+            BorderColor: =RGBA(119, 77, 3, 1)
+            Color: =RGBA(119, 77, 3, 1)
+            DisabledBorderColor: =RGBA(166, 166, 166, 1)
+            DisabledColor: =RGBA(244, 244, 244, 1)
             Height: =60
             Icon: =Icon.ChevronRight
             OnSelect: =Select(Parent)
@@ -62,9 +79,25 @@ Screen_N_2 As screen:
             ZIndex: =4
 
         Separator1 As rectangle:
+            BorderColor: =RGBA(119, 77, 3, 1)
+            Fill: =RGBA(119, 77, 3, 1)
             Height: =1
             OnSelect: =Select(Parent)
             Width: =Parent.TemplateWidth
             Y: =Parent.TemplateHeight - 1
             ZIndex: =5
+
+    Button3 As button:
+        DisabledBorderColor: =RGBA(166, 166, 166, 1)
+        DisabledColor: =RGBA(166, 166, 166, 1)
+        DisabledFill: =RGBA(244, 244, 244, 1)
+        Fill: =RGBA(68, 57, 38, 1)
+        FontWeight: =FontWeight.Semibold
+        HoverColor: =RGBA(255, 255, 255, 1)
+        HoverFill: =ColorFade(RGBA(68, 57, 38, 1), -20%)
+        Size: =15
+        Text: ="Bouton"
+        X: =100
+        Y: =105
+        ZIndex: =2
 
