--- a/repertoire/Src/Components/Component2.fx.yaml
+++ b/repertoire/Src/Components/Component2.fx.yaml
@@ -6,3 +6,10 @@ Component2 As CanvasComponent:
     Y: =0
     ZIndex: =1
 
+    HtmlText2 As htmlViewer:
+        Height: =165
+        Width: =362
+        X: =40
+        Y: =40
+        ZIndex: =1
+
