--- a/repertoire/Src/Screen3.fx.yaml
+++ b/repertoire/Src/Screen3.fx.yaml
@@ -23,6 +23,26 @@ Screen3 As screen:
         Y: =67
         ZIndex: =1
 
+    Button68 As button:
+        BorderThickness: =8
+        DisabledBorderColor: =RGBA(166, 166, 166, 1)
+        DisabledColor: =RGBA(166, 166, 166, 1)
+        DisabledFill: =RGBA(244, 244, 244, 1)
+        Fill: =RGBA(68, 57, 38, 1)
+        FontWeight: =FontWeight.Semibold
+        Height: =150
+        HoverColor: =RGBA(255, 255, 255, 1)
+        HoverFill: =ColorFade(RGBA(68, 57, 38, 1), -20%)
+        RadiusBottomLeft: =15
+        RadiusBottomRight: =15
+        RadiusTopLeft: =15
+        RadiusTopRight: =15
+        Size: =15
+        Text: ="Bouton"
+        Width: =190
+        X: =467
+        Y: =67
+        ZIndex: =1
     HtmlText1 As htmlViewer:
         Height: =192
         HtmlText: |-
