--- a/repertoire/Src/Arthur.fx.yaml
+++ b/repertoire/Src/Arthur.fx.yaml
@@ -59,3 +59,16 @@ Arthur As screen:
         Y: =365
         ZIndex: =5
 
+    Label8 As label:
+        Align: =Align.Center
+        BorderColor: =RGBA(119, 77, 3, 1)
+        Color: =RGBA(246, 88, 16, 1)
+        DisabledColor: =RGBA(166, 166, 166, 1)
+        Height: =183
+        Size: =60
+        Text: ="Coucou Arthur"
+        Width: =882
+        X: =276
+        Y: =585
+        ZIndex: =6
+
