--- a/repertoire/Src/Zac.fx.yaml
+++ b/repertoire/Src/Zac.fx.yaml
@@ -28,6 +28,7 @@ Zac As screen:
         ZIndex: =2
 
     Icon4_1 As icon.Alarm:
+        AccessibleLabel: "AAA"
         BorderColor: =RGBA(119, 77, 3, 1)
         Color: =RGBA(119, 77, 3, 1)
         DisabledBorderColor: =RGBA(166, 166, 166, 1)
