--- a/repertoire/Src/Arthur.fx.yaml
+++ b/repertoire/Src/Arthur.fx.yaml
@@ -57,7 +57,7 @@ Arthur As screen:
         FontWeight: =FontWeight.Bold
         Height: =76
         Size: =15
-        Text: ="Don't forget to go up there"
+        Text: ="Don't forget to go up there !!!!!!!!!!!"
         Width: =380
         X: =619
         Y: =353
