--- a/repertoire/Src/Arthur.fx.yaml
+++ b/repertoire/Src/Arthur.fx.yaml
@@ -72,3 +72,15 @@ Arthur As screen:
         X: =1149
         ZIndex: =6
 
+    Label7_8 As label:
+        BorderColor: =RGBA(119, 77, 3, 1)
+        Color: =RGBA(0, 0, 0, 1)
+        DisabledColor: =RGBA(166, 166, 166, 1)
+        FontWeight: =FontWeight.Bold
+        Height: =76
+        Size: =15
+        Text: ="NEW !!!!!!!!!!!"
+        Width: =380
+        X: =619+50
+        Y: =353+50
+        ZIndex: =5
